--- a/3D selfie.html
+++ b/3D selfie.html
@@ -304,344 +304,55 @@
             </div>
         </div>
         <!--Register-->
-		<!-- Header -->
-    <a name="about"></a>
-    <div class="intro-header">
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="intro-message">
-                        <h1>Aakist</h1>
-                        <h3>Think &nbsp;&nbsp;&nbsp;&nbsp;Create&nbsp;&nbsp;&nbsp;&nbsp;Print&nbsp;&nbsp;&nbsp;&nbsp;Sell</h3>
-                        <hr class="intro-divider">
-                        <ul class="list-inline">
-                            <li>
-                                <a href="shop.html" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">SHOP</span></a>
-                            </li>
-                            <li>
-                                <a href="make.html" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">MAKE</span></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.intro-header -->
-    <br>
-    <div class="col-lg-12">
-        <h2 class="intro-text text-center">Everyone's
-            <strong>A Maker</strong>
-        </h2>
-        <br>
-        <p class="text-center">Whether you're an experienced 3D designer or just want to personalize a unique gift, Aakist gives you the tools to make exactly what you want</p>
-    </div>
-    <br><br><br>
-    
-    <section id="team" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <a href="#"><h4>Hire a Designer</h4></a><br>
-                        <p class="text-muted">Work with our Community to design that something special</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <a href=""><h4>Easy Creators</h4></a><br>
-                        <p class="text-muted">Little yo no skill needed to amke peronalized gifts</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <a href=""><h4>Upload Your Design</h4></a><br>
-                        <p class="text-muted">You've got the skills and 3D file ready to go!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/moz.png" alt="">   
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Customizable</h2>
-                            <button class="info"><a href="jewellery.html">Shop Now</a></button>
-                        </div>         
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Jewellery</h2>
-                            <button class="info"><a href="../category/jewellery.html" style="text-decoration:none">Shop Now</a></button>
-                        </div>         
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Accessories</h2>
-                            <button class="info"><a href="../category/Accessories.html">Shop Now</a></button>
-                        </div>         
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Games</h2>
-                            <button class="info"><a href="../category/Games.html">Shop Now</a></button>
-                        </div>         
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Art</h2>
-                            <button class="info"><a href="../category/Art.html">Shop Now</a></button>
-                        </div>         
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover ehover5">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                        <div class="overlay">
-                            <h2>Miniatures</h2>
-                            <button class="info"><a href="../category/Miniatures.html">Shop Now</a></button>
-                        </div>         
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="portfolio1" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="intro-text text-center">3D Print In Over 50 Materials</h2>
-                    <h3 class="section-subheading text-muted">From plastics to porcelain, silver to sandstone, Shapeways offers a large collection of materials for you to create unique products</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
-                        </a>
-                    </div>
-                    <div class="portfolio-caption1">
-                        <h4>Aluminium</h4>
-                        <p class="text-muted">Our newest and strongest material is perfect for tools, drone parts and interlocking designs.</p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
-                        </a>
-                    </div>
-                    <div class="portfolio-caption1">
-                        <h4>Metals</h4>
-                        <p class="text-muted">Create beautiful and unique jewelry in a variety of precious metals like gold, steel, silver, brass, and bronze.</p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
-                        </a>
-                    </div>
-                    <div class="portfolio-caption1">
-                        <h4>Plastics</h4>
-                        <p class="text-muted">Miniatures to model trains, our plastics provide an incredibly versatile way to realize your ideas.</p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
-                        </a>
-                    </div>
-                    <div class="portfolio-caption1">
-                        <h4>Porcelain</h4>
-                        <p class="text-muted">Personalize your home with our colorful food, dishwasher, and oven safe material.</p>
-                    </div>
-                </div>
-                </div>
-            </div>
-    </section>
-
-    <div class="row">
-        <div class="col-lg-12 text-center">
-            <h2 class="intro-text text-center">Material Sample Kits</h2>
-            <h3 class="section-subheading text-muted">Get your hands on some of our materials.</h3>
-        </div>
-    </div>
-    <section id="team" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/portfolio/roundicons.png" class="img-responsive img-circle" alt="">
-                        <a href="#"><h4>Color And Finish</h4></a><br>
-                        <p class="text-muted">Great if you're designing gadgets,jewelry or miniatures</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/portfolio/roundicons.png" class="img-responsive img-circle" alt="">
-                        <a href=""><h4>Basic Kit</h4></a><br>
-                        <p class="text-muted">The Basic Sample Kit includes our most popular materials</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/portfolio/roundicons.png" class="img-responsive img-circle" alt="">
-                        <a href=""><h4>Metals</h4></a><br>
-                        <p class="text-muted">Great for designing jewelry,replacement parts, or tools</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <div class="content-section-a">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt=""><br>
-                        <p class="text-muted">When I started experimenting with 3D design myself, Shapeways was a natural fit. Because I design so much in metal, I love that all aspects of the process- from wax model to final polishing- can be handled in a single place.</p>
-                        <a href="#"><h4><strong>KASIA WISNIEWSKI</strong></h4><br>
-                            <p class="text-muted">Collected Edition</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <aside class="clients">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/wordpress.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <a href="#">
-                        <img src="img/logos/microlancer.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </aside>
-
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
-                            </div>
+	
+        <div class="intro-header1" style="background-image: url('img/downloads-bg.jpg')">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                        <div class="site-heading">
+                            <h2>Capture Your Memories with a 3D Printed Selfies</h2>
+                            <br>
+                            <span class="subheading">Visit a Aakist 3D Scanning Partner Store to Get Your Very Own 3D Printed Selfie</span>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
 
-    <footer>
+        <section>
+            <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="section-heading">What is a 3D Selfie?</h1>
+                    <p class="lead section-lead">Simply put, it's a miniature statue, 3D printed of course!</p>
+                    <p class="section-paragraph">Instead of flat, 2D pictures, easily get a 3D printed version of yourself, your family, and friends! Aakist' Selfies make for fun desk toys, great holiday gifts, unique display pieces, or anything you can think of! They're a great way to capture special moments in life in a new, unique way.</p>
+                </div>
+            </div>
+            <!-- /.row -->
+            </div>
+        <!-- /.container -->
+        </section>
+
+    <div class="banner">
+    </div>
+
+        <section>
+            <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="section-heading">How Do I Get One?</h1>
+                    <p class="section-paragraph">If you live in the India, you can visit a location that offers scanning. Strike a pose and hold it for 2 minutes. The scanner will move around you, capturing your image as a 3D digital file. The file will be automatically uploaded to Aakist, and you'll get an email with a link to purchase. You can select from a variety of materials, including Full Color Sandstone, which captures color and details really well. You can also get a 3D Selfie in Steel, Brass, or even Silver and Gold!</p>
+                </div>
+            </div>
+            <!-- /.row -->
+            </div>
+        <!-- /.container -->
+        </section>
+        <div class="container text-center">
+            <iframe width="750" height="315" src="https://www.youtube.com/embed/IN-wnuCZdqU" frameborder="0"></iframe>
+        </div>
+        <br>
+        <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -667,17 +378,17 @@
                 </div>
             </div>
         </div>
-    </footer>
-	<script>
+        </footer>
+	   <script>
         $(document).ready(function () {
         $('.dropdown-toggle').dropdown();
     	});
-	</script>
-    <script type="text/javascript">
+	   </script>
+        <script type="text/javascript">
         $('#myModal').on('shown.bs.modal', function () {
             $('#myInput').focus()
         })
-    </script>
+        </script>
 	</body>
 	
 </html>
