--- a/hire.html
+++ b/hire.html
@@ -301,7 +301,7 @@
             </div>
         </div>
         <!--Register-->
-        <header class="intro-header" style="background-image: url('img/downloads-bg.jpg')">
+        <div class="intro-header1" style="background-image: url('img/downloads-bg.jpg')">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -313,12 +313,14 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </div>
+        <br><br>
+        <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <a class="navbar-brand topnav" href="#" style="color:black; font-size:20px; padding-left:80px;">SERVICES</a>
+                    <a class="navbar-brand topnav" href="#" style="color:black; font-size:20px;">SERVICES</a>
                     <li>
                         <a href="#about" style="color:#666666;">ALL</a>
                     </li>
@@ -340,18 +342,17 @@
                     <li>
                         <a href="#contact" style="color:#666666;">SCANNING</a>
                     </li>
-                    <li>
-                        <a href="#contact" style="color:#666666;">FILE REPAIR</a>
-                    </li>
                 </ul>
             </div>
             </div>
         </div>
+        </div>
+        <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <a class="navbar-brand topnav" href="#" style="color:black; font-size:20px; padding-left:150px;">CATEGORIES</a>
+                    <a class="navbar-brand topnav" href="#" style="color:black; font-size:20px;">CATEGORIES</a>
                     <li>
                         <a href="#about" style="color:#666666;">ALL</a>
                     </li>
@@ -379,6 +380,7 @@
                 </ul>
             </div>
             </div>
+        </div>
         </div>
         <br><br>
         <div class="container">
