--- a/3D selfie.html
+++ b/3D selfie.html
@@ -333,7 +333,7 @@
         <!-- /.container -->
         </section>
 
-    <div class="banner">
+    <div class="banner1">
     </div>
     <br><br><br>
         <section class="no-padding" id="portfolio">
