--- a/community.html
+++ b/community.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style type="text/css">
+        table .even{
+            background-image:url(img/community-bg.jpg) ;
+            background-size: cover; 
+            background-repeat:no-repeat;
+        }
+        table .odd{
+            background-image:url(img/community-bg1.jpg) ;
+            background-size: cover; 
+            background-repeat:no-repeat;
+        }
+    </style>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
@@ -436,7 +448,7 @@
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="dataTable_wrapper">
-                                <table class="table table-striped table-bordered table-hover" id="dataTables-example" style="background-image:url(img/community-bg.jpg)">
+                                <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                                     <thead>
                                         <tr>
                                             <th>Topic</th>
